Resize background font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="bg noselect">
+    <div id="main-bg" class="bg noselect">
       <!-- Spotify <span>Spotify</span>
       Spotify <span>Spotify</span>
       Spotify <span>Spotify</span>
@@ -78,10 +78,10 @@
       /* display: none; */
       position: absolute;
       top: 0;
-      left: -30px;
+      left: -20px;
       right: 0;
       bottom: 0;
-      font-size: 11rem;
+      font-size: 0px;
       font-family: 'AvenirNextLTW01BoldRegular';
       opacity: 0.035;
       /* transform: translate(-50%, -50%); */
