Add beh methods

--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
       position: absolute;
       right: 20%;
       bottom: calc(50% + 20px);
+      transition-duration: .3s;
       /* text-align: right; */
     }
 
