--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
@@ -45,9 +46,43 @@
         <button id="pulse-btn" class="btn control-btn">SPREAD</button>
         <button id="pick-btn" class="btn control-btn">BLIND PICK</button>
     </div>
+    <button id="tutorial-btn" class= "btn tutorial-btn"><i class="fas fa-info"></i></button>
+    <!-- tutorial slide panel-->
+    <div id="tutorial-panel">
+        <div class="content">
+          <h2>About</h2>
+          <p>It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+          <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
+          <p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+        </div>
+        <button id="back-btn" class="btn back-btn"> <i class="fas fa-arrow-left"></i> </button>
+      </div>
+     
   </div>  
   
   <style>
+    @keyframes slideInFromLeft {
+    0% {
+    transform: translateX(-100%);
+    }
+    100% {
+    transform: translateX(0);
+    }
+
+    }
+
+    @keyframes slideOutFromRight {
+      0% {
+    transform: translateX(0%);
+    }
+     100% {
+    transform: translateX(-100%);
+    display: none;
+    }
+
+    }
+
     @font-face {
         font-family: 'AvenirNextLTW01BoldRegular'; /*a name to be used later*/
         src: url('./fonts/AvenirNextLTW01BoldRegular.ttf'); /*URL to font*/
@@ -124,8 +159,8 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%); 
-      width: 600px;
-      height: 600px;
+      width: 800px;
+      height: 800px;
     }
 
     .song-prop {
@@ -169,6 +204,42 @@
       background: rgba(0,0,0,0);
     }
 
+    #tutorial-panel{
+      animation: 1s ease-out 0s 1 slideInFromLeft;
+      background: #1a1919;
+      height: 100%;
+      width: 100%;
+      position: fixed
+    }
+    #tutorial-panel .back-btn{
+      position: absolute;
+      right:    0;
+      bottom:   0;
+      width: 50px;
+      height: 50px;
+      margin-bottom: 50px;
+      margin-right: 50px;
+      background: #1DB954;
+    }
+    #tutorial-panel .back-btn:hover {
+      background: #1DB954;
+      transform: scale(1.1) ;
+    }
+
+    .tutorial-btn{
+      position: absolute;
+      left:   0;
+      top:    0;
+      width: 50px;
+      height: 50px;
+      margin-top: 50px;
+      margin-left: 50px;
+      background: #1DB954;
+    }
+    .tutorial-btn:hover {
+      background: #1DB954;
+      transform: scale(1.1) ;
+    }
     #control-panel {
       position: absolute;
       bottom: 50px;
@@ -247,10 +318,11 @@
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-
+    
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.1/d3.min.js"></script>
   <script src="./data/top2018.js"></script>
   <script src="./circle-chart.js"></script>
+  
 </body>
 </html>
