--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <button id="tutorial-btn" class= "btn tutorial-btn"><i class="fas fa-info"></i></button>
     <!-- tutorial slide panel-->
-    <div id="tutorial-panel">
+    <!-- <div id="tutorial-panel">
         <div class="content">
             <div col-sm-12 ><h1>INTRODUCTION</h1>
               <p></p>
@@ -95,7 +95,7 @@
           </div>
         </div>
         <button id="back-btn" class="btn back-btn"> <i class="fas fa-arrow-left"></i> </button>
-      </div>  
+      </div>   -->
   </div>  
   
   <style>
