--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <button id="tutorial-btn" class= "btn tutorial-btn"><i class="fas fa-info"></i></button>
     <!-- tutorial slide panel-->
-    <!-- <div id="tutorial-panel">
+    <div id="tutorial-panel">
         <div class="content">
             <div col-sm-12 ><h1>INTRODUCTION</h1>
               <p></p>
@@ -95,7 +95,7 @@
           </div>
         </div>
         <button id="back-btn" class="btn back-btn"> <i class="fas fa-arrow-left"></i> </button>
-      </div>   -->
+      </div>  
   </div>  
   
   <style>
@@ -260,10 +260,10 @@
     #tutorial-panel .back-btn{
       position: absolute;
       right:    0;
-      bottom:   0;
+      top:   0;
       width: 50px;
       height: 50px;
-      margin-bottom: 50px;
+      margin-top: 50px;
       margin-right: 50px;
       background: #1DB954;
     }
