--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
       background: #121212;
       height: 100%;
       width: 35%;
+      min-width: 600px;
       border-right-color: gray;
       border-right: 1px solid;
       position: fixed;
